# practise

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
agents/: chat_agent.py
normal_prac/: agent.py
practise/: .gitignore  ask_db.py  async_ask_db.py  bedrock_agent.py  docker-compose.yaml  first_toon.py  hashing.py  loki_prac.py  main.py  objects_orm.py  oo.py  op.py  ready_metrics.json  reuse.py  routes.py  states.py  trying.py
routes/: __init__.py  chat_route.py
src/my_project/: .dockerignore  main.py
src/my_project/agents/: __init__.py  chat_agent.py
src/my_project/models/: __init__.py  chat_model.py  chat_state.py
src/my_project/normal_prac/: Untitled-3.json  Untitled.ipynb  agent.py  db_funcs.py  download_ppt.py  mongo_prac.py  ppt_generate.py  queues.py  toons.py
src/my_project/routes/: chat_route.py
